--- a/notebooks/1_bronze_ingestion.ipynb
+++ b/notebooks/1_bronze_ingestion.ipynb
@@ -13,6 +13,9 @@
    "source": [
     "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "\n",
+    "caminho_arquivo = \"/Workspace/Users/joao.243619@alunosatc.edu.br/Pipeline-de-dados/data\"\n",
+    "df = spark.read.format(\"csv\").option(\"header\", \"true\").load(caminho_arquivo)\n",
+    "\n",
     "df_with_metadata = df.withColumn(\"ingestion_date\", current_timestamp()) \\\n",
     "                     .withColumn(\"source_file\", input_file_name())\n",
     "\n",
