--- a/notebooks/1_bronze_ingestion.ipynb
+++ b/notebooks/1_bronze_ingestion.ipynb
@@ -11,45 +11,43 @@
    },
    "outputs": [],
    "source": [
+    "# Databricks notebook source\n",
+    "# MAGIC %md\n",
+    "# MAGIC # 2. Camada Bronze - Ingestão dos Dados de Filmes\n",
+    "# MAGIC \n",
+    "# MAGIC **Objetivo:** Ler o arquivo CSV bruto da Landing Zone e salvá-lo como uma tabela Delta na camada Bronze.\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
     "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "\n",
-    "landing_path = \"/FileStore/data/landing/dados/\"\n",
-    "bronze_path = \"/mnt/datalake/bronze/\"\n",
+    "# Define o catálogo e o schema a serem usados\n",
+    "spark.sql(\"USE CATALOG movies_catalog\")\n",
+    "spark.sql(\"USE SCHEMA bronze\")\n",
     "\n",
-    "arquivos = {\n",
-    "    \"clientes\": {\"formato\": \"csv\", \"path\": f\"{landing_path}clientes.csv\"},\n",
-    "    \"produtos\": {\"formato\": \"csv\", \"path\": f\"{landing_path}produtos.csv\"},\n",
-    "    \"vendedores\": {\"formato\": \"csv\", \"path\": f\"{landing_path}vendedores.csv\"},\n",
-    "    \"pedidos\": {\"formato\": \"csv\", \"path\": f\"{landing_path}pedidos.csv\"},\n",
-    "    \"itens_pedido\": {\"formato\": \"json\", \"path\": f\"{landing_path}itens_pedido.json\"}\n",
-    "}\n",
+    "# COMMAND ----------\n",
     "\n",
-    "print(\"Iniciando a ingestão para a camada Bronze...\")\n",
+    "# Caminho para o arquivo no volume\n",
+    "landing_path = \"/Volumes/movies_catalog/bronze/landing_zone_movies/top_100_movies_full_best_effort.csv\"\n",
+    "bronze_table_name = \"movies_raw\"\n",
     "\n",
-    "for nome_tabela, info in arquivos.items():\n",
-    "    print(f\"Processando tabela: {nome_tabela}...\")\n",
-    "    \n",
-    "    if info[\"formato\"] == \"csv\":\n",
-    "        df = spark.read.format(\"csv\") \\\n",
-    "                      .option(\"header\", \"true\") \\\n",
-    "                      .option(\"inferSchema\", \"true\") \\\n",
-    "                      .load(info[\"path\"])\n",
-    "    elif info[\"formato\"] == \"json\":\n",
-    "        df = spark.read.format(\"json\") \\\n",
-    "                      .option(\"inferSchema\", \"true\") \\\n",
-    "                      .load(info[\"path\"])\n",
-    "    \n",
-    "    df_with_metadata = df.withColumn(\"data_ingestao\", current_timestamp()) \\\n",
-    "                         .withColumn(\"arquivo_origem\", input_file_name())\n",
+    "# Leitura do arquivo CSV bruto\n",
+    "df_raw = spark.read.format(\"csv\") \\\n",
+    "                   .option(\"header\", \"true\") \\\n",
+    "                   .option(\"inferSchema\", \"true\") \\\n",
+    "                   .load(landing_path)\n",
     "\n",
-    "    output_path = f\"{bronze_path}{nome_tabela}\"\n",
-    "    df_with_metadata.write.format(\"delta\") \\\n",
-    "                          .mode(\"overwrite\") \\\n",
-    "                          .save(output_path)\n",
-    "    \n",
-    "    print(f\"Tabela '{nome_tabela}' salva com sucesso em '{output_path}'.\")\n",
+    "# Adiciona metadados de controle\n",
+    "df_bronze = df_raw.withColumn(\"data_ingestao\", current_timestamp()) \\\n",
+    "                  .withColumn(\"arquivo_origem\", input_file_name())\n",
     "\n",
-    "print(\"\\nIngestão para a camada Bronze concluída!\")"
+    "# Salva como uma tabela Delta na camada Bronze\n",
+    "df_bronze.write.mode(\"overwrite\") \\\n",
+    "         .option(\"overwriteSchema\", \"true\") \\\n",
+    "         .saveAsTable(bronze_table_name)\n",
+    "\n",
+    "print(f\"Tabela '{bronze_table_name}' criada com sucesso na camada Bronze.\")\n",
+    "display(spark.table(bronze_table_name))"
    ]
   }
  ],
