--- a/notebooks/2_silver_processing.ipynb
+++ b/notebooks/2_silver_processing.ipynb
@@ -11,64 +11,58 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import col, to_date\n",
+    "# Databricks notebook source\n",
+    "# MAGIC %md\n",
+    "# MAGIC # 3. Camada Silver - Limpeza e Padronização dos Dados\n",
+    "# MAGIC \n",
+    "# MAGIC **Objetivo:** Limpar, transformar e enriquecer os dados da camada Bronze.\n",
     "\n",
-    "bronze_path = \"/mnt/datalake/bronze/\"\n",
-    "silver_path = \"/mnt/datalake/silver/\"\n",
+    "# COMMAND ----------\n",
     "\n",
-    "clientes_df = spark.read.format(\"delta\").load(f\"{bronze_path}clientes\")\n",
-    "produtos_df = spark.read.format(\"delta\").load(f\"{bronze_path}produtos\")\n",
-    "vendedores_df = spark.read.format(\"delta\").load(f\"{bronze_path}vendedores\")\n",
-    "pedidos_df = spark.read.format(\"delta\").load(f\"{bronze_path}pedidos\")\n",
-    "itens_pedido_df = spark.read.format(\"delta\").load(f\"{bronze_path}itens_pedido\")\n",
+    "from pyspark.sql.functions import col, regexp_replace, to_date, year\n",
     "\n",
-    "print(\"Tabelas da camada Bronze carregadas.\")\n",
+    "# Define o catálogo a ser usado\n",
+    "spark.sql(\"USE CATALOG movies_catalog\")\n",
     "\n",
-    "pedidos_df_clean = pedidos_df.withColumn(\"data_pedido\", to_date(col(\"data_pedido\"), \"yyyy-MM-dd\"))\n",
-    "produtos_df_clean = produtos_df.withColumn(\"preco\", col(\"preco\").cast(\"double\"))\n",
-    "itens_pedido_df_clean = itens_pedido_df.withColumn(\"valor_total_item\", col(\"quantidade\") * col(\"preco_unitario\"))\n",
+    "# COMMAND ----------\n",
     "\n",
-    "print(\"Limpeza e transformações básicas concluídas.\")\n",
+    "# Carrega a tabela da camada Bronze\n",
+    "df_bronze = spark.read.table(\"bronze.movies_raw\")\n",
     "\n",
-    "print(\"Iniciando a criação da tabela fato de vendas...\")\n",
+    "# Realiza a limpeza e transformação dos dados\n",
+    "df_silver = df_bronze \\\n",
+    "    .withColumn(\"orcamento\", regexp_replace(col(\"budget\"), \"[$,]\", \"\").cast(\"long\")) \\\n",
+    "    .withColumn(\"receita\", regexp_replace(col(\"revenue\"), \"[$,]\", \"\").cast(\"long\")) \\\n",
+    "    .withColumn(\"data_lancamento\", to_date(col(\"release_date\"), \"yyyy-MM-dd\")) \\\n",
+    "    .withColumn(\"ano_lancamento\", year(col(\"data_lancamento\"))) \\\n",
+    "    .withColumnRenamed(\"original_title\", \"titulo_original\") \\\n",
+    "    .withColumnRenamed(\"vote_average\", \"nota_media\") \\\n",
+    "    .withColumnRenamed(\"runtime\", \"duracao_min\") \\\n",
+    "    .drop(\"budget\", \"revenue\", \"release_date\", \"homepage\", \"tagline\") # Remove colunas antigas ou desnecessárias\n",
     "\n",
-    "fato_vendas_df = itens_pedido_df_clean.alias(\"it\") \\\n",
-    "    .join(pedidos_df_clean.alias(\"pe\"), col(\"it.id_pedido\") == col(\"pe.id_pedido\"), \"inner\") \\\n",
-    "    .join(produtos_df_clean.alias(\"pr\"), col(\"it.id_produto\") == col(\"pr.id_produto\"), \"inner\") \\\n",
-    "    .join(clientes_df.alias(\"cl\"), col(\"pe.id_cliente\") == col(\"cl.id_cliente\"), \"inner\") \\\n",
-    "    .join(vendedores_df.alias(\"ve\"), col(\"pe.id_vendedor\") == col(\"ve.id_vendedor\"), \"inner\") \\\n",
-    "    .select(\n",
-    "        col(\"pe.id_pedido\"),\n",
-    "        col(\"pe.data_pedido\"),\n",
-    "        col(\"it.id_item\"),\n",
-    "        col(\"cl.id_cliente\"),\n",
-    "        col(\"cl.nome_cliente\"),\n",
-    "        col(\"cl.cidade\"),\n",
-    "        col(\"cl.estado\"),\n",
-    "        col(\"pr.id_produto\"),\n",
-    "        col(\"pr.nome_produto\"),\n",
-    "        col(\"pr.categoria\"),\n",
-    "        col(\"ve.id_vendedor\"),\n",
-    "        col(\"ve.nome_vendedor\"),\n",
-    "        col(\"ve.equipe\"),\n",
-    "        col(\"it.quantidade\"),\n",
-    "        col(\"it.preco_unitario\"),\n",
-    "        col(\"it.valor_total_item\")\n",
-    "    )\n",
+    "# Seleciona e reordena as colunas para a tabela final\n",
+    "df_silver = df_silver.select(\n",
+    "    \"id\",\n",
+    "    \"titulo_original\",\n",
+    "    \"data_lancamento\",\n",
+    "    \"ano_lancamento\",\n",
+    "    \"genres\",\n",
+    "    \"orcamento\",\n",
+    "    \"receita\",\n",
+    "    \"duracao_min\",\n",
+    "    \"nota_media\",\n",
+    "    \"overview\"\n",
+    ")\n",
     "\n",
-    "print(\"Tabela fato criada com sucesso.\")\n",
-    "display(fato_vendas_df.limit(10))\n",
+    "silver_table_name = \"silver.movies_cleaned\"\n",
     "\n",
-    "fato_vendas_df.write.format(\"delta\") \\\n",
-    "              .mode(\"overwrite\") \\\n",
-    "              .option(\"overwriteSchema\", \"true\") \\\n",
-    "              .save(f\"{silver_path}fato_vendas\")\n",
+    "# Salva a tabela limpa na camada Silver\n",
+    "df_silver.write.mode(\"overwrite\") \\\n",
+    "         .option(\"overwriteSchema\", \"true\") \\\n",
+    "         .saveAsTable(silver_table_name)\n",
     "\n",
-    "clientes_df.write.format(\"delta\").mode(\"overwrite\").save(f\"{silver_path}dim_clientes\")\n",
-    "produtos_df_clean.write.format(\"delta\").mode(\"overwrite\").save(f\"{silver_path}dim_produtos\")\n",
-    "vendedores_df.write.format(\"delta\").mode(\"overwrite\").save(f\"{silver_path}dim_vendedores\")\n",
-    "\n",
-    "print(\"\\nProcessamento da camada Silver concluído!\")"
+    "print(f\"Tabela '{silver_table_name}' criada com sucesso na camada Silver.\")\n",
+    "display(spark.table(silver_table_name))"
    ]
   }
  ],
