--- a/notebooks/3_gold_aggregation.ipynb
+++ b/notebooks/3_gold_aggregation.ipynb
@@ -11,50 +11,70 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import col, sum, count, date_format\n",
+    "# Databricks notebook source\n",
+    "# MAGIC %md\n",
+    "# MAGIC # 4. Camada Gold - Agregações de Negócio (KPIs)\n",
+    "# MAGIC \n",
+    "# MAGIC **Objetivo:** Criar tabelas agregadas com métricas de negócio a partir da camada Silver.\n",
     "\n",
-    "silver_path = \"/mnt/datalake/silver/\"\n",
-    "gold_path = \"/mnt/datalake/gold/\"\n",
+    "# COMMAND ----------\n",
     "\n",
-    "fato_vendas_df = spark.read.format(\"delta\").load(f\"{silver_path}fato_vendas\")\n",
+    "from pyspark.sql.functions import col, sum, count, avg, desc, explode, from_json\n",
+    "from pyspark.sql.types import ArrayType, StructType, StructField, StringType\n",
     "\n",
-    "print(\"Tabela fato da camada Silver carregada.\")\n",
+    "# Define o catálogo a ser usado\n",
+    "spark.sql(\"USE CATALOG movies_catalog\")\n",
     "\n",
-    "print(\"Calculando faturamento por vendedor...\")\n",
-    "agg_vendas_por_vendedor = fato_vendas_df.groupBy(\"id_vendedor\", \"nome_vendedor\", \"equipe\") \\\n",
-    "    .agg(\n",
-    "        sum(\"valor_total_item\").alias(\"faturamento_total\"),\n",
-    "        count(\"id_pedido\").alias(\"total_pedidos\")\n",
-    "    ) \\\n",
-    "    .orderBy(col(\"faturamento_total\").desc())\n",
+    "# COMMAND ----------\n",
     "\n",
-    "display(agg_vendas_por_vendedor)\n",
+    "# Carrega a tabela limpa da camada Silver\n",
+    "df_silver = spark.read.table(\"silver.movies_cleaned\")\n",
     "\n",
-    "print(\"Calculando vendas por categoria de produto...\")\n",
-    "agg_vendas_por_categoria = fato_vendas_df.groupBy(\"categoria\") \\\n",
-    "    .agg(\n",
-    "        sum(\"valor_total_item\").alias(\"faturamento_total\"),\n",
-    "        sum(\"quantidade\").alias(\"quantidade_total_vendida\")\n",
-    "    ) \\\n",
-    "    .orderBy(col(\"faturamento_total\").desc())\n",
+    "# --- Agregação 1: Lucro por Filme ---\n",
+    "print(\"Calculando o lucro por filme...\")\n",
+    "df_lucro_por_filme = df_silver \\\n",
+    "    .withColumn(\"lucro\", col(\"receita\") - col(\"orcamento\")) \\\n",
+    "    .select(\"titulo_original\", \"ano_lancamento\", \"orcamento\", \"receita\", \"lucro\") \\\n",
+    "    .orderBy(desc(\"lucro\"))\n",
     "\n",
-    "display(agg_vendas_por_categoria)\n",
+    "df_lucro_por_filme.write.mode(\"overwrite\").saveAsTable(\"gold.agg_lucro_por_filme\")\n",
+    "print(\"Tabela 'gold.agg_lucro_por_filme' criada com sucesso.\")\n",
+    "display(df_lucro_por_filme)\n",
     "\n",
-    "print(\"Calculando faturamento mensal...\")\n",
-    "agg_faturamento_mensal = fato_vendas_df.withColumn(\"ano_mes\", date_format(col(\"data_pedido\"), \"yyyy-MM\")) \\\n",
-    "    .groupBy(\"ano_mes\") \\\n",
-    "    .agg(\n",
-    "        sum(\"valor_total_item\").alias(\"faturamento_total\")\n",
-    "    ) \\\n",
-    "    .orderBy(\"ano_mes\")\n",
-    "    \n",
-    "display(agg_faturamento_mensal)\n",
     "\n",
-    "agg_vendas_por_vendedor.write.format(\"delta\").mode(\"overwrite\").save(f\"{gold_path}agg_vendas_por_vendedor\")\n",
-    "agg_vendas_por_categoria.write.format(\"delta\").mode(\"overwrite\").save(f\"{gold_path}agg_vendas_por_categoria\")\n",
-    "agg_faturamento_mensal.write.format(\"delta\").mode(\"overwrite\").save(f\"{gold_path}agg_faturamento_mensal\")\n",
+    "# --- Agregação 2: Quantidade de Filmes por Ano ---\n",
+    "print(\"\\nCalculando a quantidade de filmes por ano...\")\n",
+    "df_filmes_por_ano = df_silver.groupBy(\"ano_lancamento\") \\\n",
+    "                             .agg(count(\"id\").alias(\"quantidade_filmes\")) \\\n",
+    "                             .orderBy(desc(\"ano_lancamento\"))\n",
     "\n",
-    "print(\"\\nCamada Gold criada com sucesso!\")"
+    "df_filmes_por_ano.write.mode(\"overwrite\").saveAsTable(\"gold.agg_filmes_por_ano\")\n",
+    "print(\"Tabela 'gold.agg_filmes_por_ano' criada com sucesso.\")\n",
+    "display(df_filmes_por_ano)\n",
+    "\n",
+    "\n",
+    "# --- Agregação 3: Receita Média por Gênero ---\n",
+    "# A coluna 'genres' parece ser uma string de um array de JSONs. Precisamos tratá-la.\n",
+    "print(\"\\nCalculando a receita média por gênero...\")\n",
+    "\n",
+    "# Schema para extrair o nome do gênero do JSON\n",
+    "genre_schema = ArrayType(StructType([StructField(\"name\", StringType())]))\n",
+    "\n",
+    "df_generos = df_silver.withColumn(\"genres_array\", from_json(col(\"genres\"), genre_schema)) \\\n",
+    "                      .withColumn(\"genre_struct\", explode(col(\"genres_array\"))) \\\n",
+    "                      .withColumn(\"genero\", col(\"genre_struct.name\")) \\\n",
+    "                      .select(\"genero\", \"receita\")\n",
+    "\n",
+    "df_receita_por_genero = df_generos.groupBy(\"genero\") \\\n",
+    "                                  .agg(\n",
+    "                                      avg(\"receita\").alias(\"receita_media\"),\n",
+    "                                      count(\"*\").alias(\"quantidade_filmes\")\n",
+    "                                  ) \\\n",
+    "                                  .orderBy(desc(\"receita_media\"))\n",
+    "\n",
+    "df_receita_por_genero.write.mode(\"overwrite\").saveAsTable(\"gold.agg_receita_media_por_genero\")\n",
+    "print(\"Tabela 'gold.agg_receita_media_por_genero' criada com sucesso.\")\n",
+    "display(df_receita_por_genero)"
    ]
   }
  ],
