--- a/notebooks/1_bronze_ingestion.ipynb
+++ b/notebooks/1_bronze_ingestion.ipynb
@@ -13,9 +13,16 @@
    "source": [
     "# Databricks notebook source\n",
     "# MAGIC %md\n",
-    "# MAGIC # 2. Camada Bronze - Ingestão dos Dados de Filmes\n",
+    "# MAGIC ### 1. Movimentação: Landing Zone para Bronze\n",
     "# MAGIC \n",
-    "# MAGIC **Objetivo:** Ler o arquivo CSV bruto da Landing Zone e salvá-lo como uma tabela Delta na camada Bronze.\n",
+    "# MAGIC **Origem:** `/Volumes/movies_catalog/bronze/landing_zone_movies/top_100_movies_full_best_effort.csv`\n",
+    "# MAGIC \n",
+    "# MAGIC **Destino:** Tabela `movies_catalog.bronze.movies_raw`\n",
+    "# MAGIC \n",
+    "# MAGIC **Ações:**\n",
+    "# MAGIC 1. Lê o arquivo CSV bruto da Landing Zone.\n",
+    "# MAGIC 2. Adiciona colunas de metadados (`data_ingestao`, `arquivo_origem`).\n",
+    "# MAGIC 3. Salva os dados como uma tabela Delta na camada Bronze.\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
@@ -27,27 +34,31 @@
     "\n",
     "# COMMAND ----------\n",
     "\n",
-    "# Caminho para o arquivo no volume\n",
+    "# Caminho completo para o arquivo dentro do Volume\n",
     "landing_path = \"/Volumes/movies_catalog/bronze/landing_zone_movies/top_100_movies_full_best_effort.csv\"\n",
     "bronze_table_name = \"movies_raw\"\n",
     "\n",
-    "# Leitura do arquivo CSV bruto\n",
-    "df_raw = spark.read.format(\"csv\") \\\n",
-    "                   .option(\"header\", \"true\") \\\n",
-    "                   .option(\"inferSchema\", \"true\") \\\n",
-    "                   .load(landing_path)\n",
+    "# Leitura do arquivo CSV bruto da Landing Zone\n",
+    "try:\n",
+    "    df_raw = spark.read.format(\"csv\") \\\n",
+    "                       .option(\"header\", \"true\") \\\n",
+    "                       .option(\"inferSchema\", \"true\") \\\n",
+    "                       .load(landing_path)\n",
     "\n",
-    "# Adiciona metadados de controle\n",
-    "df_bronze = df_raw.withColumn(\"data_ingestao\", current_timestamp()) \\\n",
-    "                  .withColumn(\"arquivo_origem\", input_file_name())\n",
+    "    # Adiciona metadados de controle para rastreabilidade\n",
+    "    df_bronze = df_raw.withColumn(\"data_ingestao\", current_timestamp()) \\\n",
+    "                      .withColumn(\"arquivo_origem\", input_file_name())\n",
     "\n",
-    "# Salva como uma tabela Delta na camada Bronze\n",
-    "df_bronze.write.mode(\"overwrite\") \\\n",
-    "         .option(\"overwriteSchema\", \"true\") \\\n",
-    "         .saveAsTable(bronze_table_name)\n",
+    "    # Salva como uma tabela Delta gerenciada na camada Bronze\n",
+    "    df_bronze.write.mode(\"overwrite\") \\\n",
+    "             .option(\"overwriteSchema\", \"true\") \\\n",
+    "             .saveAsTable(bronze_table_name)\n",
     "\n",
-    "print(f\"Tabela '{bronze_table_name}' criada com sucesso na camada Bronze.\")\n",
-    "display(spark.table(bronze_table_name))"
+    "    print(f\"Tabela '{bronze_table_name}' salva com sucesso na camada Bronze.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Erro ao processar o arquivo. Verifique se o caminho '{landing_path}' está correto e se o arquivo foi carregado.\")\n",
+    "    raise e"
    ]
   }
  ],
