--- a/notebooks/2_silver_processing.ipynb
+++ b/notebooks/2_silver_processing.ipynb
@@ -13,15 +13,23 @@
    "source": [
     "# Databricks notebook source\n",
     "# MAGIC %md\n",
-    "# MAGIC # 3. Camada Silver - Limpeza e Padronização dos Dados\n",
+    "# MAGIC ### 2. Movimentação: Bronze para Silver\n",
     "# MAGIC \n",
-    "# MAGIC **Objetivo:** Limpar, transformar e enriquecer os dados da camada Bronze.\n",
+    "# MAGIC **Origem:** Tabela `movies_catalog.bronze.movies_raw`\n",
+    "# MAGIC \n",
+    "# MAGIC **Destino:** Tabela `movies_catalog.silver.movies_cleaned`\n",
+    "# MAGIC \n",
+    "# MAGIC **Ações:**\n",
+    "# MAGIC 1. Converte colunas de valores monetários para tipos numéricos.\n",
+    "# MAGIC 2. Converte a coluna de data para o formato `Date` e extrai o ano.\n",
+    "# MAGIC 3. Renomeia colunas para um padrão claro em português.\n",
+    "# MAGIC 4. Remove colunas desnecessárias e seleciona a ordem final.\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
     "from pyspark.sql.functions import col, regexp_replace, to_date, year\n",
     "\n",
-    "# Define o catálogo a ser usado\n",
+    "# Garante que o catálogo correto está em uso\n",
     "spark.sql(\"USE CATALOG movies_catalog\")\n",
     "\n",
     "# COMMAND ----------\n",
@@ -29,7 +37,7 @@
     "# Carrega a tabela da camada Bronze\n",
     "df_bronze = spark.read.table(\"bronze.movies_raw\")\n",
     "\n",
-    "# Realiza a limpeza e transformação dos dados\n",
+    "# Aplica as transformações e limpezas\n",
     "df_silver = df_bronze \\\n",
     "    .withColumn(\"orcamento\", regexp_replace(col(\"budget\"), \"[$,]\", \"\").cast(\"long\")) \\\n",
     "    .withColumn(\"receita\", regexp_replace(col(\"revenue\"), \"[$,]\", \"\").cast(\"long\")) \\\n",
@@ -38,10 +46,10 @@
     "    .withColumnRenamed(\"original_title\", \"titulo_original\") \\\n",
     "    .withColumnRenamed(\"vote_average\", \"nota_media\") \\\n",
     "    .withColumnRenamed(\"runtime\", \"duracao_min\") \\\n",
-    "    .drop(\"budget\", \"revenue\", \"release_date\", \"homepage\", \"tagline\") # Remove colunas antigas ou desnecessárias\n",
+    "    .drop(\"budget\", \"revenue\", \"release_date\", \"homepage\", \"tagline\")\n",
     "\n",
-    "# Seleciona e reordena as colunas para a tabela final\n",
-    "df_silver = df_silver.select(\n",
+    "# Seleciona e reordena as colunas para a tabela final da camada Silver\n",
+    "df_silver_final = df_silver.select(\n",
     "    \"id\",\n",
     "    \"titulo_original\",\n",
     "    \"data_lancamento\",\n",
@@ -56,13 +64,12 @@
     "\n",
     "silver_table_name = \"silver.movies_cleaned\"\n",
     "\n",
-    "# Salva a tabela limpa na camada Silver\n",
-    "df_silver.write.mode(\"overwrite\") \\\n",
-    "         .option(\"overwriteSchema\", \"true\") \\\n",
-    "         .saveAsTable(silver_table_name)\n",
+    "# Salva a tabela limpa como uma tabela Delta gerenciada na camada Silver\n",
+    "df_silver_final.write.mode(\"overwrite\") \\\n",
+    "               .option(\"overwriteSchema\", \"true\") \\\n",
+    "               .saveAsTable(silver_table_name)\n",
     "\n",
-    "print(f\"Tabela '{silver_table_name}' criada com sucesso na camada Silver.\")\n",
-    "display(spark.table(silver_table_name))"
+    "print(f\"Tabela '{silver_table_name}' salva com sucesso na camada Silver.\")"
    ]
   }
  ],
