--- a/notebooks/3_gold_aggregation.ipynb
+++ b/notebooks/3_gold_aggregation.ipynb
@@ -13,16 +13,23 @@
    "source": [
     "# Databricks notebook source\n",
     "# MAGIC %md\n",
-    "# MAGIC # 4. Camada Gold - Agregações de Negócio (KPIs)\n",
+    "# MAGIC ### 3. Movimentação: Silver para Gold\n",
     "# MAGIC \n",
-    "# MAGIC **Objetivo:** Criar tabelas agregadas com métricas de negócio a partir da camada Silver.\n",
+    "# MAGIC **Origem:** Tabela `movies_catalog.silver.movies_cleaned`\n",
+    "# MAGIC \n",
+    "# MAGIC **Destino:** Tabelas de agregação no schema `gold`.\n",
+    "# MAGIC \n",
+    "# MAGIC **Ações:**\n",
+    "# MAGIC 1. Calcula o lucro de cada filme.\n",
+    "# MAGIC 2. Conta a quantidade de filmes lançados por ano.\n",
+    "# MAGIC 3. Extrai os gêneros de uma coluna JSON e calcula a receita média para cada um.\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
-    "from pyspark.sql.functions import col, sum, count, avg, desc, explode, from_json\n",
+    "from pyspark.sql.functions import col, avg, count, desc, explode, from_json\n",
     "from pyspark.sql.types import ArrayType, StructType, StructField, StringType\n",
     "\n",
-    "# Define o catálogo a ser usado\n",
+    "# Garante que o catálogo correto está em uso\n",
     "spark.sql(\"USE CATALOG movies_catalog\")\n",
     "\n",
     "# COMMAND ----------\n",
@@ -30,34 +37,25 @@
     "# Carrega a tabela limpa da camada Silver\n",
     "df_silver = spark.read.table(\"silver.movies_cleaned\")\n",
     "\n",
-    "# --- Agregação 1: Lucro por Filme ---\n",
-    "print(\"Calculando o lucro por filme...\")\n",
+    "# --- AGREGAÇÃO 1: Lucro por Filme ---\n",
     "df_lucro_por_filme = df_silver \\\n",
     "    .withColumn(\"lucro\", col(\"receita\") - col(\"orcamento\")) \\\n",
     "    .select(\"titulo_original\", \"ano_lancamento\", \"orcamento\", \"receita\", \"lucro\") \\\n",
     "    .orderBy(desc(\"lucro\"))\n",
     "\n",
     "df_lucro_por_filme.write.mode(\"overwrite\").saveAsTable(\"gold.agg_lucro_por_filme\")\n",
-    "print(\"Tabela 'gold.agg_lucro_por_filme' criada com sucesso.\")\n",
-    "display(df_lucro_por_filme)\n",
+    "print(\"Tabela 'gold.agg_lucro_por_filme' salva com sucesso.\")\n",
     "\n",
-    "\n",
-    "# --- Agregação 2: Quantidade de Filmes por Ano ---\n",
-    "print(\"\\nCalculando a quantidade de filmes por ano...\")\n",
+    "# --- AGREGAÇÃO 2: Quantidade de Filmes por Ano ---\n",
     "df_filmes_por_ano = df_silver.groupBy(\"ano_lancamento\") \\\n",
     "                             .agg(count(\"id\").alias(\"quantidade_filmes\")) \\\n",
     "                             .orderBy(desc(\"ano_lancamento\"))\n",
     "\n",
     "df_filmes_por_ano.write.mode(\"overwrite\").saveAsTable(\"gold.agg_filmes_por_ano\")\n",
-    "print(\"Tabela 'gold.agg_filmes_por_ano' criada com sucesso.\")\n",
-    "display(df_filmes_por_ano)\n",
+    "print(\"Tabela 'gold.agg_filmes_por_ano' salva com sucesso.\")\n",
     "\n",
-    "\n",
-    "# --- Agregação 3: Receita Média por Gênero ---\n",
-    "# A coluna 'genres' parece ser uma string de um array de JSONs. Precisamos tratá-la.\n",
-    "print(\"\\nCalculando a receita média por gênero...\")\n",
-    "\n",
-    "# Schema para extrair o nome do gênero do JSON\n",
+    "# --- AGREGAÇÃO 3: Receita Média por Gênero ---\n",
+    "# Schema para extrair o nome do gênero do JSON aninhado\n",
     "genre_schema = ArrayType(StructType([StructField(\"name\", StringType())]))\n",
     "\n",
     "df_generos = df_silver.withColumn(\"genres_array\", from_json(col(\"genres\"), genre_schema)) \\\n",
@@ -73,8 +71,7 @@
     "                                  .orderBy(desc(\"receita_media\"))\n",
     "\n",
     "df_receita_por_genero.write.mode(\"overwrite\").saveAsTable(\"gold.agg_receita_media_por_genero\")\n",
-    "print(\"Tabela 'gold.agg_receita_media_por_genero' criada com sucesso.\")\n",
-    "display(df_receita_por_genero)"
+    "print(\"Tabela 'gold.agg_receita_media_por_genero' salva com sucesso.\")"
    ]
   }
  ],
