--- a/notebooks/1_bronze_ingestion.ipynb
+++ b/notebooks/1_bronze_ingestion.ipynb
@@ -13,52 +13,82 @@
    "source": [
     "# Databricks notebook source\n",
     "# MAGIC %md\n",
-    "# MAGIC ### 1. Movimentação: Landing Zone para Bronze\n",
+    "# MAGIC # 1. Camada Bronze: Ingestão dos Dados de Filmes\n",
     "# MAGIC \n",
-    "# MAGIC **Origem:** `/Volumes/movies_catalog/bronze/landing_zone_movies/top_100_movies_full_best_effort.csv`\n",
-    "# MAGIC \n",
-    "# MAGIC **Destino:** Tabela `movies_catalog.bronze.movies_raw`\n",
-    "# MAGIC \n",
-    "# MAGIC **Ações:**\n",
-    "# MAGIC 1. Lê o arquivo CSV bruto da Landing Zone.\n",
-    "# MAGIC 2. Adiciona colunas de metadados (`data_ingestao`, `arquivo_origem`).\n",
-    "# MAGIC 3. Salva os dados como uma tabela Delta na camada Bronze.\n",
+    "# MAGIC **Objetivo:** Ler o arquivo CSV bruto da Landing Zone e salvá-lo como uma tabela Delta na camada Bronze, adicionando metadados de controle para rastreabilidade.\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
+    "# Importa as funções necessárias do PySpark\n",
     "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "\n",
-    "# Define o catálogo e o schema a serem usados\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# Define o catálogo que será utilizado durante a execução\n",
     "spark.sql(\"USE CATALOG movies_catalog\")\n",
-    "spark.sql(\"USE SCHEMA bronze\")\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
-    "# Caminho completo para o arquivo dentro do Volume\n",
-    "landing_path = \"/Volumes/movies_catalog/bronze/landing_zone_movies/top_100_movies_full_best_effort.csv\"\n",
-    "bronze_table_name = \"movies_raw\"\n",
+    "# MAGIC %md\n",
+    "# MAGIC ### Definindo os Caminhos de Origem e Destino\n",
     "\n",
-    "# Leitura do arquivo CSV bruto da Landing Zone\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# O caminho completo para o arquivo CSV dentro do Volume na camada de Landing\n",
+    "source_file_path = \"/Volumes/movies_catalog/landing/landing_zone_movies/top_100_movies_full_best_effort.csv\"\n",
+    "\n",
+    "# Nome da tabela de destino na camada Bronze\n",
+    "bronze_table_name = \"bronze.movies_raw\"\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# MAGIC %md\n",
+    "# MAGIC ### Leitura, Transformação e Carga\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# Tenta executar o processo de leitura e gravação\n",
     "try:\n",
+    "    # Passo 1: Leitura do arquivo CSV bruto da Landing Zone\n",
+    "    # inferSchema deduz os tipos de dados das colunas\n",
+    "    # header=true indica que a primeira linha do arquivo é o cabeçalho\n",
     "    df_raw = spark.read.format(\"csv\") \\\n",
     "                       .option(\"header\", \"true\") \\\n",
     "                       .option(\"inferSchema\", \"true\") \\\n",
-    "                       .load(landing_path)\n",
+    "                       .load(source_file_path)\n",
     "\n",
-    "    # Adiciona metadados de controle para rastreabilidade\n",
+    "    # Passo 2: Adição de metadados de controle\n",
+    "    #   - data_ingestao: registra quando o dado foi processado\n",
+    "    #   - arquivo_origem: registra de qual arquivo o dado veio\n",
     "    df_bronze = df_raw.withColumn(\"data_ingestao\", current_timestamp()) \\\n",
     "                      .withColumn(\"arquivo_origem\", input_file_name())\n",
     "\n",
-    "    # Salva como uma tabela Delta gerenciada na camada Bronze\n",
-    "    df_bronze.write.mode(\"overwrite\") \\\n",
+    "    # Passo 3: Salva o DataFrame como uma tabela Delta na camada Bronze\n",
+    "    #   - mode(\"overwrite\"): apaga os dados existentes e os substitui pelos novos\n",
+    "    #   - option(\"overwriteSchema\", \"true\"): permite que a estrutura da tabela seja atualizada se houver mudanças\n",
+    "    df_bronze.write.format(\"delta\") \\\n",
+    "             .mode(\"overwrite\") \\\n",
     "             .option(\"overwriteSchema\", \"true\") \\\n",
     "             .saveAsTable(bronze_table_name)\n",
-    "\n",
-    "    print(f\"Tabela '{bronze_table_name}' salva com sucesso na camada Bronze.\")\n",
+    "    \n",
+    "    print(f\"SUCESSO: A tabela '{bronze_table_name}' foi criada/atualizada na camada Bronze.\")\n",
     "\n",
     "except Exception as e:\n",
-    "    print(f\"Erro ao processar o arquivo. Verifique se o caminho '{landing_path}' está correto e se o arquivo foi carregado.\")\n",
-    "    raise e"
+    "    # Informa o erro caso o processo falhe\n",
+    "    print(f\"ERRO: Não foi possível processar o arquivo. Verifique o caminho e a existência do arquivo.\")\n",
+    "    print(f\"Detalhes do erro: {e}\")\n",
+    "    # Levanta o erro para que o Job do Databricks registre a falha\n",
+    "    raise e\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# MAGIC %md\n",
+    "# MAGIC ### Verificação dos Dados na Camada Bronze\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# Exibe as 10 primeiras linhas da tabela recém-criada para verificação\n",
+    "display(spark.table(bronze_table_name).limit(10))"
    ]
   }
  ],
