--- a/notebooks/1_bronze_ingestion.ipynb
+++ b/notebooks/1_bronze_ingestion.ipynb
@@ -13,82 +13,219 @@
    "source": [
     "# Databricks notebook source\n",
     "# MAGIC %md\n",
-    "# MAGIC # 1. Camada Bronze: Ingestão dos Dados de Filmes\n",
+    "# MAGIC # Pipeline Completo de Filmes: Arquitetura Medalhão\n",
     "# MAGIC \n",
-    "# MAGIC **Objetivo:** Ler o arquivo CSV bruto da Landing Zone e salvá-lo como uma tabela Delta na camada Bronze, adicionando metadados de controle para rastreabilidade.\n",
+    "# MAGIC **Objetivo:** Executar o pipeline de dados de ponta a ponta, desde a ingestão dos dados brutos (Bronze), passando pela limpeza (Silver) e finalizando com as agregações de negócio (Gold).\n",
+    "# MAGIC \n",
+    "# MAGIC **Linguagens:**\n",
+    "# MAGIC - **Python (PySpark):** Utilizado para a ingestão de arquivos e para as transformações complexas nas camadas Bronze e Silver.\n",
+    "# MAGIC - **SQL:** Utilizado para criar as tabelas de agregação (camada Gold) e para realizar verificações.\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
-    "# Importa as funções necessárias do PySpark\n",
+    "# MAGIC %md\n",
+    "# MAGIC ### 1. Configuração do Ambiente (Python)\n",
+    "# MAGIC \n",
+    "# MAGIC Define os nomes do catálogo e schemas que serão usados em todo o notebook.\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# Define as variáveis para os nomes do catálogo e schemas.\n",
+    "# Usar variáveis torna o código mais fácil de manter e adaptar.\n",
+    "catalog_name = \"movies_catalog\"\n",
+    "landing_schema = \"landing\"\n",
+    "bronze_schema = \"bronze\"\n",
+    "silver_schema = \"silver\"\n",
+    "gold_schema = \"gold\"\n",
+    "\n",
+    "# Define o catálogo padrão para a sessão atual.\n",
+    "spark.sql(f\"USE CATALOG {catalog_name}\")\n",
+    "\n",
+    "print(f\"Catálogo '{catalog_name}' definido como padrão.\")\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# MAGIC %md\n",
+    "# MAGIC ---\n",
+    "# MAGIC ### 2. Camada Bronze: Ingestão da Landing Zone (Python)\n",
+    "# MAGIC \n",
+    "# MAGIC Lê o arquivo CSV bruto, adiciona metadados de controle e salva na camada Bronze.\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
     "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "\n",
-    "# COMMAND ----------\n",
+    "# Caminho completo para o arquivo de origem no Volume\n",
+    "source_file_path = f\"/Volumes/{catalog_name}/{landing_schema}/landing_zone_movies/top_100_movies_full_best_effort.csv\"\n",
     "\n",
-    "# Define o catálogo que será utilizado durante a execução\n",
-    "spark.sql(\"USE CATALOG movies_catalog\")\n",
+    "# Nome completo da tabela de destino na camada Bronze\n",
+    "bronze_table_name = f\"{bronze_schema}.movies_raw\"\n",
     "\n",
-    "# COMMAND ----------\n",
+    "print(f\"Iniciando ingestão do arquivo: {source_file_path}\")\n",
     "\n",
-    "# MAGIC %md\n",
-    "# MAGIC ### Definindo os Caminhos de Origem e Destino\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
-    "# O caminho completo para o arquivo CSV dentro do Volume na camada de Landing\n",
-    "source_file_path = \"/Volumes/movies_catalog/landing/landing_zone_movies/top_100_movies_full_best_effort.csv\"\n",
-    "\n",
-    "# Nome da tabela de destino na camada Bronze\n",
-    "bronze_table_name = \"bronze.movies_raw\"\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
-    "# MAGIC %md\n",
-    "# MAGIC ### Leitura, Transformação e Carga\n",
-    "\n",
-    "# COMMAND ----------\n",
-    "\n",
-    "# Tenta executar o processo de leitura e gravação\n",
     "try:\n",
-    "    # Passo 1: Leitura do arquivo CSV bruto da Landing Zone\n",
-    "    # inferSchema deduz os tipos de dados das colunas\n",
-    "    # header=true indica que a primeira linha do arquivo é o cabeçalho\n",
+    "    # Leitura do arquivo CSV bruto\n",
     "    df_raw = spark.read.format(\"csv\") \\\n",
     "                       .option(\"header\", \"true\") \\\n",
     "                       .option(\"inferSchema\", \"true\") \\\n",
     "                       .load(source_file_path)\n",
     "\n",
-    "    # Passo 2: Adição de metadados de controle\n",
-    "    #   - data_ingestao: registra quando o dado foi processado\n",
-    "    #   - arquivo_origem: registra de qual arquivo o dado veio\n",
+    "    # Adiciona metadados de controle\n",
     "    df_bronze = df_raw.withColumn(\"data_ingestao\", current_timestamp()) \\\n",
     "                      .withColumn(\"arquivo_origem\", input_file_name())\n",
     "\n",
-    "    # Passo 3: Salva o DataFrame como uma tabela Delta na camada Bronze\n",
-    "    #   - mode(\"overwrite\"): apaga os dados existentes e os substitui pelos novos\n",
-    "    #   - option(\"overwriteSchema\", \"true\"): permite que a estrutura da tabela seja atualizada se houver mudanças\n",
+    "    # Salva como uma tabela Delta na camada Bronze\n",
     "    df_bronze.write.format(\"delta\") \\\n",
     "             .mode(\"overwrite\") \\\n",
     "             .option(\"overwriteSchema\", \"true\") \\\n",
     "             .saveAsTable(bronze_table_name)\n",
     "    \n",
-    "    print(f\"SUCESSO: A tabela '{bronze_table_name}' foi criada/atualizada na camada Bronze.\")\n",
+    "    print(f\"SUCESSO: Tabela '{bronze_table_name}' salva na camada Bronze.\")\n",
     "\n",
     "except Exception as e:\n",
-    "    # Informa o erro caso o processo falhe\n",
-    "    print(f\"ERRO: Não foi possível processar o arquivo. Verifique o caminho e a existência do arquivo.\")\n",
-    "    print(f\"Detalhes do erro: {e}\")\n",
-    "    # Levanta o erro para que o Job do Databricks registre a falha\n",
+    "    print(f\"ERRO ao processar a camada Bronze.\")\n",
     "    raise e\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
     "# MAGIC %md\n",
-    "# MAGIC ### Verificação dos Dados na Camada Bronze\n",
+    "# MAGIC ---\n",
+    "# MAGIC ### 3. Camada Silver: Limpeza e Transformação (Python)\n",
+    "# MAGIC \n",
+    "# MAGIC Lê os dados da camada Bronze, aplica limpezas, converte tipos de dados e padroniza o schema.\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
-    "# Exibe as 10 primeiras linhas da tabela recém-criada para verificação\n",
-    "display(spark.table(bronze_table_name).limit(10))"
+    "from pyspark.sql.functions import col, regexp_replace, to_date, year\n",
+    "\n",
+    "# Nomes das tabelas de origem e destino\n",
+    "bronze_table = f\"{bronze_schema}.movies_raw\"\n",
+    "silver_table = f\"{silver_schema}.movies_cleaned\"\n",
+    "\n",
+    "print(f\"Iniciando transformação da tabela '{bronze_table}' para a camada Silver.\")\n",
+    "\n",
+    "# Carrega a tabela da camada Bronze\n",
+    "df_bronze = spark.read.table(bronze_table)\n",
+    "\n",
+    "# Aplica as transformações e limpezas\n",
+    "df_silver = df_bronze \\\n",
+    "    .withColumn(\"orcamento\", regexp_replace(col(\"budget\"), \"[$,]\", \"\").cast(\"long\")) \\\n",
+    "    .withColumn(\"receita\", regexp_replace(col(\"revenue\"), \"[$,]\", \"\").cast(\"long\")) \\\n",
+    "    .withColumn(\"data_lancamento\", to_date(col(\"release_date\"), \"yyyy-MM-dd\")) \\\n",
+    "    .withColumn(\"ano_lancamento\", year(col(\"data_lancamento\"))) \\\n",
+    "    .withColumnRenamed(\"original_title\", \"titulo_original\") \\\n",
+    "    .withColumnRenamed(\"vote_average\", \"nota_media\") \\\n",
+    "    .withColumnRenamed(\"runtime\", \"duracao_min\") \\\n",
+    "    .drop(\"budget\", \"revenue\", \"release_date\", \"homepage\", \"tagline\")\n",
+    "\n",
+    "# Seleciona e reordena as colunas para a tabela final\n",
+    "df_silver_final = df_silver.select(\n",
+    "    \"id\", \"titulo_original\", \"data_lancamento\", \"ano_lancamento\", \"genres\",\n",
+    "    \"orcamento\", \"receita\", \"duracao_min\", \"nota_media\", \"overview\"\n",
+    ")\n",
+    "\n",
+    "# Salva a tabela limpa na camada Silver\n",
+    "df_silver_final.write.format(\"delta\") \\\n",
+    "               .mode(\"overwrite\") \\\n",
+    "               .option(\"overwriteSchema\", \"true\") \\\n",
+    "               .saveAsTable(silver_table)\n",
+    "\n",
+    "print(f\"SUCESSO: Tabela '{silver_table}' salva na camada Silver.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9974e36d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- MAGIC %sql\n",
+    "-- MAGIC -- AGREGAÇÃO 1: Lucro por Filme\n",
+    "-- MAGIC -- Cria uma tabela com o cálculo do lucro para cada filme, ordenada do maior para o menor.\n",
+    "-- MAGIC CREATE OR REPLACE TABLE gold.agg_lucro_por_filme AS\n",
+    "-- MAGIC SELECT\n",
+    "-- MAGIC   titulo_original,\n",
+    "-- MAGIC   ano_lancamento,\n",
+    "-- MAGIC   orcamento,\n",
+    "-- MAGIC   receita,\n",
+    "-- MAGIC   (receita - orcamento) AS lucro\n",
+    "-- MAGIC FROM\n",
+    "-- MAGIC   silver.movies_cleaned\n",
+    "-- MAGIC ORDER BY\n",
+    "-- MAGIC   lucro DESC;\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "-- MAGIC %sql\n",
+    "-- MAGIC -- AGREGAÇÃO 2: Quantidade de Filmes por Ano\n",
+    "-- MAGIC -- Cria uma tabela que conta quantos filmes foram lançados em cada ano.\n",
+    "-- MAGIC CREATE OR REPLACE TABLE gold.agg_filmes_por_ano AS\n",
+    "-- MAGIC SELECT\n",
+    "-- MAGIC   ano_lancamento,\n",
+    "-- MAGIC   COUNT(id) AS quantidade_filmes\n",
+    "-- MAGIC FROM\n",
+    "-- MAGIC   silver.movies_cleaned\n",
+    "-- MAGIC GROUP BY\n",
+    "-- MAGIC   ano_lancamento\n",
+    "-- MAGIC ORDER BY\n",
+    "-- MAGIC   ano_lancamento DESC;\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "-- MAGIC %sql\n",
+    "-- MAGIC -- AGREGAÇÃO 3: Receita Média por Gênero\n",
+    "-- MAGIC -- Extrai os nomes dos gêneros da coluna JSON e calcula a receita média para cada um.\n",
+    "-- MAGIC CREATE OR REPLACE TABLE gold.agg_receita_media_por_genero AS\n",
+    "-- MAGIC WITH movies_genres AS (\n",
+    "-- MAGIC   SELECT\n",
+    "-- MAGIC     receita,\n",
+    "-- MAGIC     explode(from_json(genres, 'array<struct<name:string>>')).name AS genero\n",
+    "-- MAGIC   FROM\n",
+    "-- MAGIC     silver.movies_cleaned\n",
+    "-- MAGIC )\n",
+    "-- MAGIC SELECT\n",
+    "-- MAGIC   genero,\n",
+    "-- MAGIC   AVG(receita) AS receita_media,\n",
+    "-- MAGIC   COUNT(1) AS quantidade_filmes\n",
+    "-- MAGIC FROM\n",
+    "-- MAGIC   movies_genres\n",
+    "-- MAGIC GROUP BY\n",
+    "-- MAGIC   genero\n",
+    "-- MAGIC ORDER BY\n",
+    "-- MAGIC   receita_media DESC;\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# MAGIC %md\n",
+    "# MAGIC ---\n",
+    "# MAGIC ### 5. Verificação Final (SQL)\n",
+    "# MAGIC \n",
+    "# MAGIC Exibe amostras das tabelas criadas na camada Gold para confirmar o sucesso do pipeline.\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "-- MAGIC %sql\n",
+    "-- MAGIC SELECT * FROM gold.agg_lucro_por_filme LIMIT 10;\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "-- MAGIC %sql\n",
+    "-- MAGIC SELECT * FROM gold.agg_filmes_por_ano LIMIT 10;\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "-- MAGIC %sql\n",
+    "-- MAGIC SELECT * FROM gold.agg_receita_media_por_genero LIMIT 10;\n",
+    "\n",
+    "# COMMAND ----------\n",
+    "\n",
+    "# MAGIC %md\n",
+    "# MAGIC ## Pipeline Concluído com Sucesso!"
    ]
   }
  ],
